--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,54 @@
   <link href="https://fonts.googleapis.com/css?family=Seaweed+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Quicksand', Arial, sans-serif; width: 320px; padding: 10px; background: #7fdbff; color: #fff; font-size: 1.1em; }
-    h3 { font-family: 'Seaweed Script', cursive; color: #fff; font-size: 1.8em; }
-    input, button { width: 100%; margin: 8px 0; background: #e0f7fa; color: #333; border: none; border-radius: 4px; padding: 10px; font-family: 'Quicksand', Arial, sans-serif; font-size: 1em; }
-    input::placeholder { color: #b0bec5; font-size: 1em; }
-    #status { margin: 14px 0; font-size: 1em; }
-    #confirmBtn { background: #00bcd4; color: #fff; display: none; }
-    #lockBtn { background: #039be5; color: #fff; }
-    #unlockBtn { background: #607d8b; color: #fff; }
+    body { 
+      font-family: 'Quicksand', Arial, sans-serif; 
+      width: 400px; 
+      padding: 15px; 
+      background: #7fdbff; 
+      color: #fff; 
+      font-size: 1.1em; 
+      box-sizing: border-box;
+    }
+    h3 { 
+      font-family: 'Seaweed Script', cursive; 
+      color: #fff; 
+      font-size: 1.8em; 
+      margin-bottom: 15px;
+    }
+    input, button { 
+      width: 100%; 
+      margin: 10px 0; 
+      background: #e0f7fa; 
+      color: #333; 
+      border: none; 
+      border-radius: 4px; 
+      padding: 12px; 
+      font-family: 'Quicksand', Arial, sans-serif; 
+      font-size: 1em; 
+      box-sizing: border-box;
+    }
+    input::placeholder { 
+      color: #b0bec5; 
+      font-size: 1em; 
+    }
+    #status { 
+      margin: 14px 0; 
+      font-size: 1em; 
+    }
+    #confirmBtn { 
+      background: #00bcd4; 
+      color: #fff; 
+      display: none; 
+    }
+    #lockBtn { 
+      background: #039be5; 
+      color: #fff; 
+    }
+    #unlockBtn { 
+      background: #607d8b; 
+      color: #fff; 
+    }
   </style>
 </head>
 <body>
